added js functionality and cleaned up css

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         <div class="input-group-prepend">
           <span class="input-group-text">09:00 am</span>
         </div>
-        <textarea class="form-control" aria-label="With textarea" id="9am"></textarea>
+        <textarea class="form-control" aria-label="With textarea" id="09"></textarea>
         <div class="input-group-append">
-          <button class="input-group-text" index="9"><i class="far fa-save"></i></button>
+          <button class="input-group-text" index="09"><i class="far fa-save"></i></button>
         </div>
       </div>
       <!-- Timeblock -->
@@ -43,7 +43,7 @@
         <div class="input-group-prepend">
           <span class="input-group-text">10:00 am</span>
         </div>
-        <textarea class="form-control" aria-label="With textarea" id="10am"></textarea>
+        <textarea class="form-control" aria-label="With textarea" id="10"></textarea>
         <div class="input-group-append">
           <button class="input-group-text" index="10"><i class="far fa-save"></i></button>
         </div>
@@ -53,7 +53,7 @@
         <div class="input-group-prepend">
           <span class="input-group-text">11:00 am</span>
         </div>
-        <textarea class="form-control" aria-label="With textarea" id="11am"></textarea>
+        <textarea class="form-control" aria-label="With textarea" id="11"></textarea>
         <div class="input-group-append">
           <button class="input-group-text" index="11"><i class="far fa-save"></i></button>
         </div>
@@ -64,7 +64,7 @@
         <div class="input-group-prepend">
           <span class="input-group-text">12:00 pm</span>
         </div>
-        <textarea class="form-control" aria-label="With textarea" id="12pm"></textarea>
+        <textarea class="form-control" aria-label="With textarea" id="12"></textarea>
         <div class="input-group-append">
           <button class="input-group-text" index="12"><i class="far fa-save"></i></button>
         </div>
@@ -75,9 +75,9 @@
         <div class="input-group-prepend">
           <span class="input-group-text">01:00 pm</span>
         </div>
-        <textarea class="form-control" aria-label="With textarea" id="1pm"></textarea>
+        <textarea class="form-control" aria-label="With textarea" id="13"></textarea>
         <div class="input-group-append">
-          <button class="input-group-text" index="1"><i class="far fa-save"></i></button>
+          <button class="input-group-text" index="13"><i class="far fa-save"></i></button>
         </div>
       </div>
 
@@ -86,9 +86,9 @@
         <div class="input-group-prepend">
           <span class="input-group-text">02:00 pm</span>
         </div>
-        <textarea class="form-control" aria-label="With textarea" id="2pm"></textarea>
+        <textarea class="form-control" aria-label="With textarea" id="14"></textarea>
         <div class="input-group-append">
-          <button class="input-group-text" index="2"><i class="far fa-save"></i></button>
+          <button class="input-group-text" index="14"><i class="far fa-save"></i></button>
         </div>
       </div>
 
@@ -97,9 +97,9 @@
         <div class="input-group-prepend">
           <span class="input-group-text">03:00 pm</span>
         </div>
-        <textarea class="form-control" aria-label="With textarea" id="3pm"></textarea>
+        <textarea class="form-control" aria-label="With textarea" id="15"></textarea>
         <div class="input-group-append">
-          <button class="input-group-text" index="3"><i class="far fa-save"></i></button>
+          <button class="input-group-text" index="15"><i class="far fa-save"></i></button>
         </div>
       </div>
 
@@ -108,9 +108,9 @@
         <div class="input-group-prepend">
           <span class="input-group-text">04:00 pm</span>
         </div>
-        <textarea class="form-control" aria-label="With textarea" id="4pm"></textarea>
+        <textarea class="form-control" aria-label="With textarea" id="16"></textarea>
         <div class="input-group-append">
-          <button class="input-group-text" index="4"><i class="far fa-save"></i></button>
+          <button class="input-group-text" index="16"><i class="far fa-save"></i></button>
         </div>
       </div>
 
@@ -119,14 +119,14 @@
         <div class="input-group-prepend">
           <span class="input-group-text">05:00 pm</span>
         </div>
-        <textarea class="form-control" aria-label="With textarea" id="5pm"></textarea>
+        <textarea class="form-control" aria-label="With textarea" id="17"></textarea>
         <div class="input-group-append">
-          <button class="input-group-text" index="5"><i class="far fa-save"></i></button>
+          <button class="input-group-text" index="17"><i class="far fa-save"></i></button>
         </div>
       </div>
 
-      <h4 class="text-center d-none d-lg-block">"Time will not slow down when something unpleasant lies ahead."</h4>
-      <h6 class="text-center font-italic text-muted d-none d-lg-block">- Harry Potter in The Goblet of Fire.</h6>
+      <h4 class="text-center d-none d-xl-block">"Time will not slow down when something unpleasant lies ahead."</h4>
+      <h6 class="text-center font-italic text-muted d-none d-xl-block">- Harry Potter in The Goblet of Fire.</h6>
 
     </div>
 
