made a few changes to colors and background

--- a/index.html
+++ b/index.html
@@ -124,10 +124,11 @@
           <button class="input-group-text" index="17"><i class="far fa-save"></i></button>
         </div>
       </div>
-
-      <h4 class="text-center d-none d-xl-block">"Time will not slow down when something unpleasant lies ahead."</h4>
-      <h6 class="text-center font-italic text-muted d-none d-xl-block">- Harry Potter in The Goblet of Fire.</h6>
-
+      <div class="quote">
+        <h4 class="text-center">"Time will not slow down when something unpleasant lies ahead."</h4>
+        <h6 class="text-center font-italic mb-5">- Harry Potter in The Goblet of Fire.</h6>
+      </div>
+      
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
